--- a/Proj Practiques/ProjectePractiques/automatization.ipynb
+++ b/Proj Practiques/ProjectePractiques/automatization.ipynb
@@ -2,27 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 13 --seekRange 4 --gop 2\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 13 --seekRange 4 --gop 4\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 13 --seekRange 4 --gop 6\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 13 --seekRange 9 --gop 2\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 13 --seekRange 9 --gop 4\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 13 --seekRange 9 --gop 6\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 25 --seekRange 4 --gop 2\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 25 --seekRange 4 --gop 4\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 25 --seekRange 4 --gop 6\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 25 --seekRange 9 --gop 2\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 25 --seekRange 9 --gop 4\n",
+      "java -jar dist/ProjectePractiques.jar -i zips/Cubo.zip --batch 1 --encode 1 --decode 1 --tileSize 8 --threshold 25 --seekRange 9 --gop 6\n"
+     ]
+    }
+   ],
    "source": [
+    "jarfile = \"dist/ProjectePractiques.jar\"\n",
     "input_file = \"zips/Cubo.zip\"\n",
     "batch = 1\n",
     "encode = 1\n",
     "decode = 1\n",
     "\n",
-    "tilesize = [8, 16]\n",
-    "threshold = [2, 4, 6, 8, 10, 13, 16, 19, 21, 25]\n",
-    "seek_range = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-    "gop = [2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "tilesize = [8]\n",
+    "threshold = [13, 25]\n",
+    "seek_range = [4, 9]\n",
+    "gop = [2, 4, 6]\n",
     "\n",
     "for ts in tilesize:\n",
     "    for thrs in threshold:\n",
     "        for sr in seek_range:\n",
     "            for gp in gop:\n",
-    "                print(\"java -jar -i \" + input_file + \" --batch \" + batch + \" --encode \" + encode \n",
-    "                      + \" --decode \" + decode + \" --tileSize \" + ts + \" --threshold \" + thrs \n",
-    "                      + \" --seekRange \" + sr + \" --gop \" +  gp)\n",
+    "                print(\"java -jar \" + jarfile +   \" -i \" + input_file + \" --batch \" + str(batch) + \" --encode \" + str(encode) \n",
+    "                      + \" --decode \" + str(decode) + \" --tileSize \" + str(ts) + \" --threshold \" + str(thrs) \n",
+    "                      + \" --seekRange \" + str(sr) + \" --gop \" +  str(gp))\n",
     "\n",
     "\n"
    ]
